Complete pro mode

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -13,7 +13,7 @@
     <p>What up Zeta?</p>
     <form id="search">
         <input type="text" id="peopleSearch" name="peopleSearch" placeholder="Enter name:">
-        <button id="submitSearch" class="btn btn-info">Submit</button>
+        <button id="submitSearch" class="btn btn-info">Search</button>
     </form>
 
     <h1>ADD SOMEONE!</h1>
